syntax = "proto3";

package wormhole;

option go_package = "generated/";

// message created by server, sent to client
message RpcServerMessage {
    oneof server_message {
        StdoutData stdout_data = 1;
        StderrData stderr_data = 2;
        ExitStatus exit_status = 3;
        ClientConnectAck client_connect_ack = 4;
    }
}

// message created by client, sent to server
message RpcClientMessage {
    oneof client_message {
        StdinData stdin_data = 1;
        TerminalResize terminal_resize = 2;
        RequestPty request_pty = 3;
        StartPayload start_payload = 4;
        ResetData reset_data = 5;
    }
}


// server messages
message StdinData {
    bytes data = 1;
}

message TerminalResize {
    uint32 cols = 1;
    uint32 rows = 2;
}

message RequestPty {
    string term_env = 1;
    uint32 rows = 2;
    uint32 cols = 3;
    bytes termios = 4;
}

message StartPayload {
    string wormhole_param = 1;
}

message ResetData {

}


// client messages
message StdoutData {
    bytes data = 1;
}

message StderrData {
    bytes data = 1;
}

message ExitStatus {
    uint32 exit_code = 1;
}

message ClientConnectAck {

}
